--- a/plant.html
+++ b/plant.html
@@ -16,6 +16,24 @@
 <body>
   <h2>Pick a plant by Christian</h2>
 
+<div class="container">
 
+  <div class="row">
+    <div class="col-sm-2">B</div>
+    <div class="col-sm-2">O</div>
+    <div class="col-sm-2">S</div>
+    <div class="col-sm-2">W</div>
+    <div class="col-sm-2">E</div>
+    <div class="col-sm-2">L</div>
+  </div>
+  <div class="row">
+    <div class="col-md">Begonia</div>
+    <div class="col-md">Orchid</div>
+    <div class="col-md">Sunflower</div>
+    <div class="col-md">White Rose</div>
+    <div class="col-md">Eucalyptus</div>
+    <div class="col-md">Lotus</div>
+  </div>
+</div>
 </body>
 </html>
