--- a/plant.html
+++ b/plant.html
@@ -34,6 +34,9 @@
     <div class="col-md">Eucalyptus</div>
     <div class="col-md">Lotus</div>
   </div>
+  <p>The second row breaks first which includes the flower names
+    these break first because bootstrap automatically stacks things vertically. 
+  </p>
 </div>
 </body>
 </html>
